src/styles/_btn.scss
@import "vars";

.btn {
    width: 400px;
    padding: 27px 0;
    font-size: 28px;
    background-color: $accentColor;
    color: #FFFFFF;
    font-weight: bold;
    text-align: center;
    line-height: 28px;
    border: none;
    text-decoration: none;
    text-transform: uppercase;

    &:hover{
        background-color: $greyColor;
        color: $accentColor;
        cursor: pointer;
        transition: background-color 0.1s ease;
    }
}

#dark .btn:hover {
    background-color: $bgColor;
}

.btn_smaller {
    width: 300px;
    padding: 22px 0;
    font-size: 20px;
    line-height: 20px;
}

#dark .btn_smaller:hover {
    background-color: $greyColor;
}

@media screen and (max-width: $tablet) {
    .btn {
        width: 300px;
        padding: 23px 0;
        font-size: 20px;
        line-height: 20px;
    }

    .btn_smaller {
        padding: 22px 0;
    }

    .btn_smaller {
        padding: 22px 0;
    }
  }

  @media screen and (max-width: $mobile) {
    .btn {
        width: 200px;
        padding: 11px 0;
        font-size: 12px;
        line-height: 12px;
    }

    .btn_smaller {
        width: 170px;
        font-size: 12px;
        line-height: 12px;
    }
  }

